--- a/singlepage.html
+++ b/singlepage.html
@@ -76,7 +76,7 @@ html, body {
   align-self: flex-end;
   background: transparent;
   border: none;
-  color: #fff;
+  color: #ff1100;
   font-size: 1.8rem; /* increased from 1.2rem to 1.8rem */
   cursor: pointer;
   margin-top: 0;
