--- a/games.html
+++ b/games.html
@@ -211,3 +211,8 @@
   })();
 })();
 </script>
+  <script>
+    window.onload = function() {
+      alert("Please report any broken games you find and check the changelogs to see if its been fixed");
+    };
+  </script>
