--- a/single-html/Hotline Miami.html
+++ b/single-html/Hotline Miami.html
@@ -32,7 +32,7 @@
       color: #00ffe5;
       text-shadow: 1px 1px #ff0080;
       user-select: none;
-      z-index: 5;
+      z-index: -1;
     }
   </style>
 </head>
@@ -83,7 +83,7 @@
 <body>
   <canvas id="canvas" width="1920" height="1080"></canvas>
     <div id="credits" data-credit="truffled-98c">
-    ...
+    port by 98corbins — truffled.lol
     </div>
   <script src="html5game/HotlineMiami.js"></script>
 </body>
