Update Offroad Mountain Bike.html

--- a/single-html/Offroad Mountain Bike.html
+++ b/single-html/Offroad Mountain Bike.html
@@ -29,7 +29,7 @@
     <script>
       const hideFullScreenButton = "1";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/bike.loader.js";
+      const loaderUrl = buildUrl + "https://raw.githubusercontent.com/gn-math/assets/refs/heads/main/116/Build/bike.loader.js";
       const config = {
         dataUrl: buildUrl + "/bike.data.unityweb",
         frameworkUrl: buildUrl + "/bike.framework.js.unityweb",
@@ -95,3 +95,4 @@
     </script>
   </body>
 </html>
+
