Update Offroad Mountain Bike.html

--- a/single-html/Offroad Mountain Bike.html
+++ b/single-html/Offroad Mountain Bike.html
@@ -28,7 +28,7 @@
     <div id="unity-fullscreen-button" style="display: none;"></div>
     <script>
       const hideFullScreenButton = "1";
-      const buildUrl = "Build";
+      const buildUrl = "";
       const loaderUrl = buildUrl + "https://raw.githubusercontent.com/gn-math/assets/refs/heads/main/116/Build/bike.loader.js";
       const config = {
         dataUrl: buildUrl + "https://cdn.jsdelivr.net/gh/gn-math/assets@main/116/bike.data.unityweb",
@@ -95,5 +95,6 @@
     </script>
   </body>
 </html>
+
 
 
