--- a/pc-games.html
+++ b/pc-games.html
@@ -89,10 +89,11 @@
   <div class="header">
     <h2 id="bzg-version">Version: …</h2>
     <h1 class="page-title">PC Games</h1>
-    <h2>⚠️THESE GAMES DONT WORK ON CHROMEBOOKS ONLY THE DESKTOPS⚠️ - <a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>
+    <h2>Sorry the PC Games are down until I find a new way to host them check back soon.</h2>
+    <!--
+    <h2>⚠️THESE GAMES DONT WORK ON CHROMEBOOKS ONLY THE DESKTOPS⚠️ - <a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>-->
   </div>
-
-  <div class="games-grid" id="gamesGrid">
+  <div style="display:none;" class="games-grid" id="gamesGrid">
     <div class="no-results">Loading PC games...</div>
   </div>
 <script>
