--- a/pc-games.html
+++ b/pc-games.html
@@ -91,7 +91,7 @@
     <h1 class="page-title">PC Games</h1>
     <h2>Sorry the PC Games are down until I find a new way to host them check back soon.</h2>
     <!--
-    <h2>⚠️THESE GAMES DONT WORK ON CHROMEBOOKS ONLY THE DESKTOPS⚠️ - <a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>-->
+    <h2>⚠️THESE GAMES DONT WORK ON CHROMEBOOKS ONLY THE DESKTOPS⚠️ - <a style="color:white;" href="https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/instructions.txt" target="_blank">Click here if you're confused</a></h2>-->
   </div>
   <div style="display:none;" class="games-grid" id="gamesGrid">
     <div class="no-results">Loading PC games...</div>
